Account entry pages, Affiliates

--- a/GhasreMobile/Views/Account/SignUp.cshtml
+++ b/GhasreMobile/Views/Account/SignUp.cshtml
@@ -4,9 +4,9 @@
     Layout = "_AccountLayout.cshtml";
 }
 
-<div class="col">
+<div class="form-block col">
 
-    <h3 class="uk-margin-bottom">
+    <h3 class="uk-margin-medium-bottom">
         ثبت نام
     </h3>
 
@@ -26,6 +26,12 @@
         <label class="fg-label">تکرار گذرواژه</label>
         <input class="entry" type="tel" value="" />
         <span class="text-danger"></span>
+    </div>
+
+    <div class="actions gap-t">
+        <a href="/Account" class="btn btn-link">ورود</a>
+        <button class="btn btn-primary">ثبت نام</button>
+
     </div>
 
 </div>
