--- a/GhasreMobile/Views/Account/_AccountLayout.cshtml
+++ b/GhasreMobile/Views/Account/_AccountLayout.cshtml
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div class="l-image">
-            <div class="l-cover"></div>
+            <img src="~/st/v/biscuits/account_biscuit.svg" class="l-cover"/>
             <img src="@(ViewData["Image"] ?? "/st/r/Entry_2.png")" alt="" />
         </div>
     </main>
