--- a/GhasreMobile/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Views/Shared/_Layout.cshtml
@@ -45,11 +45,11 @@
                 <nav class="rowr">
                     <button uk-icon="grid-outline"></button>
                     <a href="/">خانه</a>
-                    <a href="">تالار گفتگو</a>
-                    <a href="">تماس با ما</a>
-                    <a href="">وبلاگ ها</a>
-                    <a href="">شعب ما</a>
-                    <a href="">گالری</a>
+                    <a href="/Forum">تالار گفتگو</a>
+                    <a href="/Home/Contact">تماس با ما</a>
+                    <a href="/Blog">وبلاگ ها</a>
+                    <a href="/Home/About">شعب ما</a>
+                    <a href="/Gallery">گالری</a>
                 </nav>
                 <a href="" class="profile">
                     <span>پروفایل</span>
