--- a/GhasreMobile/wwwroot/css/pages/account.scss
+++ b/GhasreMobile/wwwroot/css/pages/account.scss
@@ -9,6 +9,7 @@ body {
     display: flex;
     padding: 20px;
     position: fixed;
+    z-index: 24;
 }
 
 .l {
@@ -17,20 +18,69 @@ body {
     height: 100vh;
 
     &-content {
+        position: relative;
+        background-color: #fff;
+        z-index: 10;
+
         .l-mid {
-            display: flex;
-            height: 100%;
+            @include row;
+            height: 100vh;
+
+            .form-block {
+                margin: auto;
+                min-width: 28vw;
+                width: 420px;
+                padding: 0 20px;
+            }
         }
     }
 
-    &-image {
+    &-cover {
+        z-index: 5;
+        height: 100vh;
+        position: absolute;
+        margin-left: -1px;
+        top: 0;
+        bottom: 0;
+        background-color: transparent;
+        filter: drop-shadow(12px 0 12px rgba(0,0,0,.24));
+    }
 
-        &-cover {
-        }
+    &-image {
+        position: relative;
+        z-index: 5;
+
 
         img {
             height: 100%;
             @include obj;
+        }
+    }
+}
+
+@media only screen and (max-width : 624px) {
+    .l {
+        display: grid;
+        grid-template-columns: 1fr;
+        height: 100vh;
+
+        &-content {
+            position: relative;
+            background-color: #fff;
+            z-index: 10;
+
+            .l-mid {
+                @include row;
+                height: 100vh;
+
+                .form-block {
+                    margin: auto;
+                    margin-top: 16px;
+                    min-width: unset;
+                    width: 100%;
+                    padding: 0 20px;
+                }
+            }
         }
     }
 }
