--- a/GhasreMobile/Views/Account/ChangePassword.cshtml
+++ b/GhasreMobile/Views/Account/ChangePassword.cshtml
@@ -8,29 +8,23 @@
 <div class="form-block col">
 
     <h3 class="uk-margin-medium-bottom">
-        ورود
+        تغییر رمز عبور
     </h3>
 
     <div class="fg-col">
-        <label class="fg-label">شماره تلفن</label>
+        <label class="fg-label">رمز عبور جدید</label>
         <input class="entry" type="tel" value="" />
         <span class="text-danger"></span>
     </div>
 
     <div class="fg-col">
-        <label class="fg-label">گذر واژه</label>
+        <label class="fg-label">تکرار رمز عبور</label>
         <input class="entry" type="tel" value="" />
         <span class="text-danger"></span>
-    </div>
-
-    <div class="fg-col">
-        <a href="/Account/ForgotPassword">فراموشی رمز عبور</a>
     </div>
 
     <div class="actions gap-t">
-        <a href="/Account/SignUp" class="btn btn-link">ثبت نام</a>
-        <button class="btn btn-primary">ورود</button>
-
+        <button class="btn btn-primary">تایید</button>
     </div>
 
 </div>
