--- a/GhasreMobile/Views/Home/Index.cshtml
+++ b/GhasreMobile/Views/Home/Index.cshtml
@@ -50,13 +50,13 @@
 
     <ul class="uk-slideshow-items">
         <li>
-            <img src="https://picsum.photos/200" alt="" uk-cover>
+            <a href="/"><img src="https://picsum.photos/200" alt="" uk-cover></a>
         </li>
         <li>
-            <img src="https://picsum.photos/150" alt="" uk-cover>
+            <a href="/"><img src="https://picsum.photos/150" alt="" uk-cover></a>
         </li>
         <li>
-            <img src="https://picsum.photos/100" alt="" uk-cover>
+            <a href="/"><img src="https://picsum.photos/100" alt="" uk-cover></a>
         </li>
     </ul>
 
@@ -190,15 +190,15 @@
     <h3>درخواست خدمات درب منزل</h3>
     <p class="text-3">برای درحواست خدمات تعمیراتی و گارانتی درب منزل این فرم را پر کنید </p>
     <div class="col">
-        <div class="row uk-child-width-1-2">
-            <div class="fg-col">
-                <label for="TelNo" class="fg-label">شماره تلفن</label>
-                <input id="TelNo" name="TelNo" type="tel" class="entry" value="" />
-                <span class="text-danger"></span>
-            </div>
+        <div class="rowr uk-child-width-1-2">
             <div class="fg-col uk-margin-left">
                 <label for="Name" class="fg-label">نام و نام خانوادگی</label>
                 <input id="Name" name="Name" type="text" class="entry" value="" />
+                <span class="text-danger"></span>
+            </div>
+            <div class="fg-col">
+                <label for="TelNo" class="fg-label">شماره تلفن</label>
+                <input id="TelNo" name="TelNo" type="tel" class="entry" value="" />
                 <span class="text-danger"></span>
             </div>
         </div>
