--- a/GhasreMobile/Areas/Admin/Views/Category/Components/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Category/Components/Create.cshtml
@@ -1,8 +1,17 @@
 ﻿@model DataLayer.Models.TblCatagory
 <div class="modal-header">
-    <h6 class="modal-title" id="modalCenterTitle">
-        افزودن دسته بندی
-    </h6>
+    @if (ViewBag.ParentId == null)
+    {
+        <h6 class="modal-title" id="modalCenterTitle">
+            افزودن دسته بندی
+        </h6>
+    }
+    else
+    {
+        <h6 class="modal-title" id="modalCenterTitle">
+            افزودن دسته بندی @ViewBag.Name
+        </h6>
+    }
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
@@ -13,13 +22,22 @@
       data-ajax-mode="replace"
       data-ajax-complete="EndCatagoryCreate()"
       data-ajax-update="#ajaxresult">
-    <input asp-for="ParentId" />
+    @Html.AntiForgeryToken()
+    @if (ViewBag.ParentId == null)
+    {
+        <input type="hidden" asp-for="ParentId" value="" />
+    }
+    else
+    {
+        <input type="hidden" asp-for="ParentId" />
+    }
+
     <div class="modal-body">
         <div class="form-row">
             <div class="form-group col-md-4">
                 <label asp-for="Name"></label>
                 <input asp-for="Name" class="form-control form-control-sm" placeholder="مثال : لوازم جانبی">
-                <span asp-validation-for="Name"></span>
+                <span class="text-danger" asp-validation-for="Name"></span>
                 <br />
                 <input asp-for="IsOnFirstPage"> فعال باشد
             </div>
