--- a/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                             </a>
                         </li>
                         <li class="nav-item active">
-                            <a href="/Admin/Category">
+                            <a href="/Admin/Catagory">
                                 <span class="icon-holder">
                                     <i uk-icon="file-tray-stacked"></i>
                                 </span>
