--- a/GhasreMobile/Areas/Admin/Views/Product/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Create.cshtml
@@ -1,8 +1,95 @@
 ﻿
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "افزودن محصول";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
+<div class="row flex-div">
+    <div class="col-md-12 flex-div pb-3 pt-3">
 
-<h1>Create</h1>
+        <div class="card flex-div border-0 main-shadow">
+            <div class="card-body flex">
+                <ul uk-accordion class="bg-costum mt-3 pt-3 pb-3 uk-text-small uk-border-rounded">
+                    <li class="col-md-4">
+                        <a class="uk-accordion-title uk-text-small" href="#">دسته بندی</a>
+                        <div class="uk-accordion-content">
+                            <ul class="uk-margin-right" uk-accordion>
+                                <li>
+                                    <a class="uk-accordion-title uk-text-small" href="#">زیر دسته بندی</a>
+                                    <div class="uk-accordion-content">
+                                        <ul class="uk-margin-right" uk-accordion>
+                                        </ul>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+                <hr />
+                <form>
+                    <div class="form-row">
+                        <div class="form-group col-md-3">
+                            <select class="form-control form-control-sm">
+                                <option>برند</option>
+                                <option>برند 1</option>
+                                <option>برند 2</option>
+                                <option>برند 3</option>
+                            </select>
+                        </div>
+                    </div>
+                    <hr class="uk-margin-remove" />
+                    <div class="form-row mt-3">
 
+                        <div class="form-group col-md-3">
+                            <label>نام محصول</label>
+                            <input class="form-control form-control-sm" placeholder="مثال : شارژر">
+                        </div>
+                        <div class="form-group col-md-2">
+                            <label>قیمت</label>
+                            <input class="form-control form-control-sm" placeholder="مثال : 80000 تومان">
+                        </div>
+                        <div class="form-group col-md-2">
+                            <label>درصد تخفیف</label>
+                            <input class="form-control form-control-sm" placeholder="مثال : 10">
+                        </div>
+                    </div>
+                    <div class="custom-file col-md-7 mt-3">
+                        <input type="file" class="custom-file-input form-control form-control-sm">
+                        <label class="custom-file-label" for="Image" data-browse="انتخاب" id="FileName">انتخاب تصویر اصلی</label>
+                    </div>
+                    <div class="form-row mt-3">
+                        <div class="form-group col-md-2">
+                            <label>تعداد</label>
+                            <input class="form-control form-control-sm" placeholder="مثال : 20">
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label>متن جستجو</label>
+                            <input class="form-control form-control-sm" placeholder="مثال : ...">
+                        </div>
+                        <div class=" col-md-2 mt-4 pt-3 mr-3">
+                            <input type="checkbox"> فروش اقساطی
+                        </div>
+                    </div>
+                    <div class="mt-3">
+                        <textarea id="DescriptionShortHtml" name="Mytext"></textarea>
+                    </div>
+                    <div class="mt-3">
+                        <textarea id="DescriptionLongHtml" name="Mytext"></textarea>
+                    </div>
+                    <input type="file" multiple />
+                </form>
+            </div>
+
+            <div class="card-footer bg-white">
+                <a onclick="BtnAddPackage()" class="btn btn-success btn-sm text-white pull-right ml-4">افزودن<span class="icon-holder uk-margin-small-right" uk-icon="add-circle-outline"></span></a>
+            </div>
+        </div>
+    </div>
+</div>
+<script>
+    $(function () {
+        $('#DescriptionShortHtml').ckeditor();
+    });
+    $(function () {
+        $('#DescriptionLongHtml').ckeditor();
+    });
+</script>
