--- a/GhasreMobile/Views/Home/Index.cshtml
+++ b/GhasreMobile/Views/Home/Index.cshtml
@@ -50,13 +50,13 @@
 
     <ul class="uk-slideshow-items">
         <li>
-            <a href="/"><img src="https://picsum.photos/200" alt="" uk-cover></a>
+            <a href="/"><img src="~/st/r/ads/a1.jpg" alt="" uk-cover></a>
         </li>
         <li>
-            <a href="/"><img src="https://picsum.photos/150" alt="" uk-cover></a>
+            <a href="/"><img src="~/st/r/ads/a2.jpg" alt="" uk-cover></a>
         </li>
         <li>
-            <a href="/"><img src="https://picsum.photos/100" alt="" uk-cover></a>
+            <a href="/"><img src="~/st/r/ads/a3.jpg" alt="" uk-cover></a>
         </li>
     </ul>
 
