--- a/GhasreMobile/wwwroot/css/uikit.css
+++ b/GhasreMobile/wwwroot/css/uikit.css
@@ -244,6 +244,11 @@ body {
   height: 156px;
   padding-bottom: 16px; }
 
+@media only screen and (max-width: 960px) {
+  .space-nav-header {
+    height: 106px;
+    padding-bottom: 8px; } }
+
 @media only screen and (max-device-width: 524px) {
   .space-nav-bottom {
     display: block; } }
