--- a/GhasreMobile/wwwroot/css/uikit.scss
+++ b/GhasreMobile/wwwroot/css/uikit.scss
@@ -184,6 +184,13 @@ body {
     padding-bottom: 16px;
 }
 
+@media only screen and (max-width: 960px) {
+    .space-nav-header {
+        height: 106px;
+        padding-bottom: 8px;
+    }
+}
+
 @media only screen and (max-device-width: 524px) {
     .space-nav-bottom {
         display: block;
