--- a/GhasreMobile/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Views/Shared/_Layout.cshtml
@@ -20,9 +20,48 @@
 
     <!-- This is the off-canvas -->
     <div id="offCanvas" uk-offcanvas="overlay: true;flip: true">
-        <div class="uk-offcanvas-bar">
+        <div class="uk-offcanvas-bar col">
 
-            <button class="uk-offcanvas-close" type="button" uk-close></button>
+            <img src="~/st/r/logo.jpg" width="92" height="92" class="uk-margin-auto" alt="" />
+
+            <ul>
+                <li>
+                    <a href="">
+                        <span uk-icon="home"></span>
+                        <span>خانه</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <span uk-icon="chatbubbles"></span>
+                        <span>تالار گفتگو</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <span uk-icon="call"></span>
+                        <span>تماس با ما</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <span uk-icon="flag"></span>
+                        <span>شعب ما</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <span uk-icon="browsers-outline"></span>
+                        <span>وبلاگ ها</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <span uk-icon="image-outline"></span>
+                        <span>گالری</span>
+                    </a>
+                </li>
+            </ul>
 
         </div>
     </div>
