--- a/GhasreMobile/wwwroot/css/uikit.css
+++ b/GhasreMobile/wwwroot/css/uikit.css
@@ -3153,7 +3153,9 @@ select.uk-form-width-xsmall {
   transition: 0.1s ease-in-out;
   transition-property: color, opacity;
   position: absolute;
-  cursor: pointer; }
+  cursor: pointer;
+  top: unset;
+  right: 5px; }
 
 /* Hover + Focus */
 .uk-close:hover,
@@ -4365,14 +4367,12 @@ select.uk-form-width-xsmall {
   width: 270px;
   padding: 20px 20px;
   background: white;
-  -moz-border-radius: 24px 0 0 24px;
-  -webkit-border-radius: 24px 0 0 24px;
-  border-radius: 24px 0 0 24px;
   -moz-box-shadow: rgba(0, 0, 0, 0.32) 0 0px 28px;
   -webkit-box-shadow: rgba(0, 0, 0, 0.32) 0 0px 28px;
   box-shadow: rgba(0, 0, 0, 0.32) 0 0px 28px;
   /* 3 */
   overflow-y: auto;
+  overflow-x: hidden;
   -webkit-overflow-scrolling: touch; }
 
 /* Tablet landscape and bigger */
