--- a/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -74,6 +74,22 @@
                                         <span class="title">افزودن محصول</span>
                                     </a>
                                 </li>
+                                <li class="nav-item active">
+                                    <a href="/Admin/Color">
+                                        <span class="icon-holder">
+                                            <i uk-icon="color-palette"></i>
+                                        </span>
+                                        <span class="title">رنگ ها</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item active">
+                                    <a href="/Admin/Property">
+                                        <span class="icon-holder">
+                                            <i uk-icon="list"></i>
+                                        </span>
+                                        <span class="title">ویژگی ها</span>
+                                    </a>
+                                </li>
                             </ul>
                         </li>
                         <li class="nav-item active">
