--- a/GhasreMobile/Areas/Admin/Views/Catagory/Components/ShowChildsCatagory.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Catagory/Components/ShowChildsCatagory.cshtml
@@ -35,9 +35,9 @@
                                     <div class="col-xl-2 col-lg-2  col-sm-3 col-5">
                                         <div class="option d-flex">
 
-                                            <a data-placement="top" data-toggle="tooltip"><i class="btn ml-2 text-primary" uk-icon="albums-outline"></i></a>
+                                            <a onclick="ShowChildsCatagory(@item.CatagoryId)" data-placement="top" data-toggle="tooltip"><i class="btn ml-2 text-primary" uk-icon="albums-outline"></i></a>
 
-                                            <a data-placement="top" data-toggle="tooltip"><i class="btn ml-2 text-primary" uk-icon="create-outline"></i></a>
+                                            <a onclick="EditCatagory(@item.CatagoryId)" data-placement="top" data-toggle="tooltip"><i class="btn ml-2 text-primary" uk-icon="create-outline"></i></a>
                                         </div>
                                     </div>
                                 </div>
