--- a/GhasreMobile/Areas/Admin/Views/Product/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Create.cshtml
@@ -36,9 +36,7 @@
                             </select>
                         </div>
                     </div>
-                    <hr class="uk-margin-remove" />
                     <div class="form-row mt-3">
-
                         <div class="form-group col-md-3">
                             <label>نام محصول</label>
                             <input class="form-control form-control-sm" placeholder="مثال : شارژر">
@@ -69,22 +67,76 @@
                             <input type="checkbox"> فروش اقساطی
                         </div>
                     </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <input type="text" value="" data-role="tagsinput" id="tags" class="form-control" placeholder="کلمات کلیدی">
+                        </div>
+                    </div>
+                    <hr />
+                    <label class="uk-text-bold">رنگ:</label>
+                    <div class="form-row ">
+                        <input class="mt-2" type="checkbox">
+                        <label class="mr-2"> مشکی </label>
+                        <div class=" uk-border-rounded mr-2 color-box" style="background:#000000;"></div>
+                    </div>
+                    <div class="form-row ">
+                        <input class="mt-2" type="checkbox">
+                        <label class="mr-2"> قرمز </label>
+                        <div class=" uk-border-rounded mr-2 color-box" style="background:#e62424;"></div>
+                    </div>
+                    <div class="form-row ">
+                        <input class="mt-2" type="checkbox">
+                        <label class="mr-2"> سفید </label>
+                        <div class=" uk-border-rounded mr-2 color-box" style="background:#ffffff;border:1px solid #808080;"></div>
+                    </div>
+                    <div class="form-row ">
+                        <input class="mt-2" type="checkbox">
+                        <label class="mr-2"> سرمه ای </label>
+                        <div class=" uk-border-rounded mr-2 color-box" style="background:#225275;"></div>
+                    </div>
+                    <div class="form-row mt-3">
+                        <div class="form-group col-md-2">
+                            <label class="uk-text-bold">انتخاب از سایر رنگ ها:</label>
+                            <input type="color" class="form-control form-control-sm" name="Color">
+                        </div>
+                    </div>
+                    <hr />
+                    <div class="form-row mt-3">
+                        <div class="form-group col-md-5">
+                            <label class="uk-text-bold">افزودن ویژگی</label>
+                            <input class="form-control form-control-sm" placeholder="مثال : حافظه داخلی">
+                        </div>
+                        <div class="form-group col-md-2 mt-md-4 pt-2">
+                            <a href="#" class="btn btn-info btn-sm">افزودن</a>
+                        </div>
+                    </div>
+                    <div class="form-inline col-md-7">
+                        <label class="ml-5">عنوان ویژگی:</label>
+                        <input class="form-control form-control-sm" placeholder="مثال : 32 گیگابایت">
+                    </div>
+                    <hr />
                     <div class="mt-3">
                         <textarea id="DescriptionShortHtml" name="Mytext"></textarea>
                     </div>
                     <div class="mt-3">
                         <textarea id="DescriptionLongHtml" name="Mytext"></textarea>
                     </div>
-                    <input type="file" multiple />
+                </form>
+                <hr />
+                <label class="mt-3 uk-text-bold">افزودن عکس به گالری تصاویر</label>
+                <form action="/file-upload"
+                      class="dropzone col-md-7 uk-border-rounded bg-light"
+                      id="my-awesome-dropzone">
                 </form>
             </div>
-
             <div class="card-footer bg-white">
                 <a onclick="BtnAddPackage()" class="btn btn-success btn-sm text-white pull-right ml-4">افزودن<span class="icon-holder uk-margin-small-right" uk-icon="add-circle-outline"></span></a>
             </div>
         </div>
     </div>
 </div>
+@section Script{
+<script src="~/js/bootstrap-tagsinput.js"></script>
 <script>
     $(function () {
         $('#DescriptionShortHtml').ckeditor();
@@ -93,3 +145,4 @@
         $('#DescriptionLongHtml').ckeditor();
     });
 </script>
+}
