--- a/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link href="/AdminStaticFile/style-rtl.css" rel="stylesheet" />
     <link href="~/css/uikit.min.css" rel="stylesheet" />
     <link href="~/AdminStaticFile/DataPicker/jquery.md.bootstrap.datetimepicker.style.css" rel="stylesheet" />
+    <link href="~/css/dropzone.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -169,5 +170,6 @@
 <script src="~/js/uikit-icons.js"></script>
 <link href="~/AdminStaticFile/DataPicker/jquery.md.bootstrap.datetimepicker.style.css" rel="stylesheet" />
 <script src="~/AdminStaticFile/script.js"></script>
+<script src="~/js/dropzone.js"></script>
 
 @RenderSection("Script", false)
