--- a/GhasreMobile/Areas/Admin/Views/Slider/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Slider/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "اسلایدر";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
