--- a/GhasreMobile/Areas/Admin/Views/Catagory/Components/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Catagory/Components/Edit.cshtml
@@ -23,10 +23,7 @@
                 <input asp-for="Name" class="form-control form-control-sm" placeholder="نام">
                 <span asp-validation-for="Name" class="text-danger"></span>
                 <br />
-                @if (Model.InverseParent.Count() == 0)
-                {
-                    <input asp-for="IsOnFirstPage">@:فعال باشد
-                }
+                    <input asp-for="IsOnFirstPage">فعال باشد
             </div>
         </div>
     </div>
