--- a/GhasreMobile/Areas/Admin/Views/Product/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Edit.cshtml
@@ -1,6 +1,6 @@
-﻿
-@{
-    ViewData["Title"] = "ویژگی ها";
+﻿@{
+    ViewData["Title"] = "ویرایش محصول";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
+
 
