add register and login

--- a/GhasreMobile/Views/Account/Login.cshtml
+++ b/GhasreMobile/Views/Account/Login.cshtml
@@ -28,7 +28,7 @@
     </div>
 
     <div class="actions gap-t">
-        <a href="/Account/SignUp" class="btn btn-link">ثبت نام</a>
+        <a href="/Register" class="btn btn-link">ثبت نام</a>
         <button class="btn btn-primary">ورود</button>
 
     </div>
