--- a/GhasreMobile/Views/_ViewImports.cshtml
+++ b/GhasreMobile/Views/_ViewImports.cshtml
@@ -1,1 +1,2 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using DataLayer.ViewModels
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
